--- a/lib/samplesite/themes/deic-blog/css/clean-blog.css
+++ b/lib/samplesite/themes/deic-blog/css/clean-blog.css
@@ -390,8 +390,8 @@ article .container .row div {
   }
 }
 .post-preview {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 52px;
+  margin-bottom: 66px;
 }
 .post-preview > a {
   color: #404040;
@@ -710,8 +710,34 @@ section#content div.inner li input[type=checkbox] {
 
 article img {
 	display: block;
-	margin: 56px auto;
+	margin: 44px auto 8px auto;
+}
 
+article .row > div > p:first-child > img {
+	margin: 4px auto 8px auto;
+}
+
+article img + div.modal + em {
+  max-width: 320px;
+  display: inline-block;
+  margin-left: calc(50% - 158px);
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+table {
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 24px;
+	margin-top: 21px;
+}
+
+article th img, article td img {
+	margin: 24px auto 6px auto;
+}
+
+.post-preview > a > img {
+	margin-top: 46px;
 }
 
 .popout {
