--- a/lib/samplesite/themes/deic-wiki/contents.twig
+++ b/lib/samplesite/themes/deic-wiki/contents.twig
@@ -73,9 +73,9 @@
 
 </head>
 
-{% set editable = '' %}
-{% if meta.editable is not empty and not current_page.id is empty %}
-{% set editable = 'yes' %}
+{% set iseditable = '' %}
+{% if editable is not empty and not current_page.id is empty %}
+{% set iseditable = 'yes' %}
 {% endif %}
 
 <body>
@@ -94,7 +94,7 @@
 				<input type="search" id="search_input" name="q" placeholder="Search" />
 			</form>
 		{% endif %}
-		{% if editable is not empty %}
+		{% if iseditable is not empty %}
 			<div class="write-post" share="{{ oc_share }}" path="{{ oc_path }}"
 				dir_id="{{ oc_parent_id }}" id="{{ oc_id }}" owner="{{ oc_owner }}" user="{{ oc_user }}"
 				user_home_url="{{ oc_user_home_url }}" group="{{ oc_group }}" title="Create new page">
@@ -111,10 +111,10 @@
 	</nav>
 
 	<ul class="leftbar">
-		{% if editable is not empty %}
+		{% if iseditable is not empty %}
 			<button id="manage_files">Manage</button>
 		{% endif %}
-		{% for fol in paged_folders|sort %}
+		{% for fol in found_folders|sort %}
 		{% if fol != "/" %}
 			{% set depth = fol | split('/') | length -1 %}
 			{% set name = (fol | split('/'))[ depth - 1 ] %}
@@ -134,7 +134,7 @@
 		{% endfor %}
 	</ul>
 
-	{% if editable is not empty and not current_page.id is empty %}
+	{% if iseditable is not empty and not current_page.id is empty %}
 		<button title="Edit page" class="edit-button float-button"
 		path="{{ oc_path }}{% if current_page.id ends with 'index' and oc_path ends with '/' %}index.md{% endif %}"
 		dir_id="{{ oc_parent_id }}" id="{{ oc_id }}" 
@@ -166,7 +166,7 @@
 				<!-- File editor -->
 				<div id="content"><div id="controls"><div id="notification"></div></div></div>
 				<!-- Generate index. -->
-				{% if meta.readable is not empty %}
+				{% if readable is not empty %}
 					<div id="contents">
 						<!-- Contents of {{ current_page.folder }} -->
 						<ul>
