--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -154,9 +154,9 @@
 											{% endfor %}
                     </div>
                     {% endif %}
-                    {% if page.meta.index_image %}
+                    {% if page.meta.indeximage %}
                     <a href="{{ page.url }}">
-                    <img class="indexImage" src="{{ page.meta.index_image }}"/>
+                    <img class="indexImage" src="{{ page.meta.indeximage }}"/>
                     </a>
                     {% endif %}
                 </div>
