--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -113,14 +113,12 @@
                 </div>
             </div>
         </div>
-        <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
-        dir_id="{{ oc_parent_id }}" id="{{ oc_id }}"
-        {% if (meta.access == 'public' or not readable is not empty) and
-        (oc_user is not defined  or oc_owner is not defined or oc_owner != oc_user) %}
-        	style="display:none;"
+   			{% if meta.access != 'public' and editable is not empty %}
+	        <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
+	        dir_id="{{ oc_parent_id }}" id="{{ oc_id }}"
+	        user="{{ oc_user }}" owner="{{ oc_owner }}" group="{{ oc_group }}"
+	        host="{{ oc_user_home_url }}">Show file</button>
         {% endif %}
-        user="{{ oc_user }}" owner="{{ oc_owner }}" group="{{ oc_group }}"
-         host="{{ oc_user_home_url }}">Show file</button>
     </header>
     
     <hr class="small">
