--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -117,8 +117,8 @@ a:focus {text-decoration: none;}
 #nav ul>li #toc>ul>li {
 		padding-top: 0px;
 }
-#nav li:hover {
-	background-color: #808080;
+#nav li:hover, #nav li.highlight {
+	background-color: #808080 ! important;
 }
 #nav li.current, #nav li.current li {
 	background-color: #d3d3d3;
