Small code font.

--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -39,8 +39,11 @@ body {
 	font-weight: 200;
 }
 
-body pre, body code{
+body pre{
 	font-size: 14px;
+}
+body code{
+  font-size: 13px;
 }
 body pre{
 	border-radius: 2px;
