--- a/lib/samplesite/themes/deic-blog/css/modal-images.css
+++ b/lib/samplesite/themes/deic-blog/css/modal-images.css
@@ -55,7 +55,7 @@
 
 .small-image:hover, .verysmall-image:hover {
 	opacity: 0.7;
-	cursor: pointer;
+	cursor: zoom-in;
 }
 
 /* The Modal (background) */
