--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -3,6 +3,8 @@
 
 <head data-requesttoken="{{ config.requesttoken }}">
 
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ base_url }}/rss" />
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
