--- a/lib/samplesite/themes/deic-blog/css/clean-blog.css
+++ b/lib/samplesite/themes/deic-blog/css/clean-blog.css
@@ -67,7 +67,8 @@ hr.thin {
   border-color: white;
 }
 hr {
-	border-color: #808080 -moz-use-text-color -moz-use-text-color;
+	border-color: #808080;
+	border-top: 1px solid #d7d7d7;
 	padding-top: 8px;
 }
 .displayname {
