--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -135,7 +135,7 @@
 				<div class="post-preview">
 									{% if has_search_page %}
                    <a href="{{ base_url }}/search/author:{{ page.author }}"><div class="avatardiv" author="{{ page.author }}"></div></a>
-                   <a href="{{ page.url }}">
+                   <a id= "{{ page.id }}" href="{{ page.url }}">
                   {% endif %}
                         <h2 class="post-title">
 							{{ page.title }}
